--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,7 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea
 *.iws
 *.iml
 *.ipr
@@ -45,3 +42,4 @@ bin/
 .DS_Store
 /src/test/resources/input/*.txt
 !/src/test/resources/input/*-example.txt
+/.idea/
